# esim-gateway

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml
docs/: PROVIDER_CHECKLIST.md
docs/providers/: esimgo_mapping.yaml
scripts/: integrate_provider.py
src/esim_gateway/: __init__.py  config.py  main.py
src/esim_gateway/api/: account.py  catalog.py  dependencies.py  esims.py  health.py  orders.py  router.py
src/esim_gateway/core/: exceptions.py  http.py  logging.py  resilience.py  security.py  utils.py
src/esim_gateway/models/: __init__.py  account.py  catalog.py  esim.py  inventory.py  order.py  usage.py
src/esim_gateway/providers/: base.py  esimcard.py  esimgo.py  registry.py  zetexa.py
templates/: provider.py.template  provider_mapping.yaml
tests/: conftest.py
tests/mocks/esimcard/: balance.json  countries.json  esim_detail.json  login.json  my_esims.json  package_detail.json  packages.json  purchase.json  regions.json  usage.json
tests/mocks/esimgo/: catalogue.json  order_create.json  order_single.json  orders_list.json
tests/mocks/zetexa/: countries.json  order_create.json  order_qrcode.json  orders_list.json  packages.json  regions.json  token.json
tests/test_api/: test_catalog.py  test_orders.py  test_security.py
tests/test_core/: test_resilience.py
