[project]
name = "esim-gateway"
version = "0.1.0"
description = "Unified API gateway for eSIM providers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "Hamza Plojovic", email = "hamzaplojovic9@gmail.com" }
]
maintainers = [
    { name = "Hamza Plojovic", email = "hamzaplojovic9@gmail.com" }
]
keywords = ["esim", "api", "gateway", "telecom", "connectivity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Telephony",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx[http2]>=0.27.0",
    "structlog>=24.0.0",
    "jsonpath-ng>=1.7.0",
    "ply>=3.11",
    "slowapi>=0.1.9",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.32.0",
    "mypy>=1.13.0",
    "ruff>=0.7.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "ARG"]
ignore = ["B008"]  # Allow Depends() in function defaults (FastAPI pattern)

[tool.ruff.lint.per-file-ignores]
"src/esim_gateway/core/exceptions.py" = ["N818"]  # Allow Exception suffix naming

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.0",
    "ruff>=0.14.8",
]

[project.urls]
Homepage = "https://github.com/hamzaplojovic/esim-gateway"
Documentation = "https://github.com/hamzaplojovic/esim-gateway#readme"
Repository = "https://github.com/hamzaplojovic/esim-gateway.git"
Issues = "https://github.com/hamzaplojovic/esim-gateway/issues"
Changelog = "https://github.com/hamzaplojovic/esim-gateway/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/esim_gateway"]
